Updates from Overleaf

--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -368,7 +368,19 @@ A \gls{mec} uncertainty parameter which specifically affects \gls{mec} events is
 
 \clearpage
 \section{Other Systematics}
-MEC, POT, Detector, Energy scale - maybe put some of these in above sections.
+
+Microboone wasn't included in order to save computing time + it has a minimal impact on sensitiivites (see X plot) - it would be trivial to add. 
+
+\begin{figure}
+    \centering
+    \includegraphics[width = 0.49\textwidth]{figures-chap5/efficiency_matrices/efficiency_error_matrix_32x32_type1_cor10.00pct.root.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap5/efficiency_matrices/efficiency_error_matrix_32x32_type2_cor2.00pct_sbnduncor0.50pct_icarusuncor0.50pct.root.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap5/efficiency_matrices/efficiency_error_matrix_32x32_type2_cor2.00pct_sbnduncor2.00pct_icarusuncor0.50pct.root.pdf}
+    \includegraphics[width = 0.49\textwidth]{figures-chap5/efficiency_matrices/efficiency_error_matrix_32x32_type3_cor2.00pct_bulkuncor0.50pct_sbndpeakEnumuCCuncor2.00pct.root.pdf}
+    \caption{Caption}
+    \label{fig:my_label}
+\end{figure}
+Detector, Energy scale.
 
 \begin{table}[]
 \begin{adjustbox}{width=\textwidth,center}
