--- a/chap6-valor_analysis.tex
+++ b/chap6-valor_analysis.tex
@@ -308,10 +308,21 @@ POT: 6.600E20
     \caption[SBN CC Inclusive reconstructed neutrino energy spectra]{SBND (top-left), MicroBooNE (top-right) and ICARUS (bottom)
     reconstructed neutrino energy spectra constructed from the samples of $\nue$~CC~Inclusive events. The spectra are broken down into the
     contributions from each neutrino interaction mode.\\\\\\}
-    \label{fig:IncContribMC_nue} 
+    \label{fig:nominal_nue_spectra} 
   }
 \end{figure}
 
+\begin{figure}[h!]
+  {\includegraphics[width=0.49\textwidth]{figures-chap6/spectra/nue_app_dmsq_1.32_sinsq_0.003_overlay_spectrum_sbn_nd_BNB_FHC_0_modes.pdf}}
+  {\includegraphics[width=0.49\textwidth]{figures-chap6/spectra/nue_app_dmsq_1.32_sinsq_0.003_overlay_spectrum_sbn_uboone_BNB_FHC_1_modes.pdf}}
+  {\includegraphics[width=0.49\textwidth]{figures-chap6/spectra/nue_app_dmsq_1.32_sinsq_0.003_overlay_spectrum_sbn_icarus_BNB_FHC_2_modes.pdf}}
+  \captionsetup{width=0.49\textwidth}
+  \parbox[b]{0.49\textwidth}%
+  {
+    \caption[SBN CC Inclusive reconstructed neutrino energy spectra with oscillated spectrum overlayed]{The nominal spectra as in \FigureRef{fig:nominal_nue_spectra} but an additional integrated oscillated spectrum with oscillation parameters, $sin^22\theta_{\mu e} = 0.003$ and $\Delta m^2_{41} = 1.32$ eV$^2$ has been overlayed showing the change in event rate.\\\\\\}
+    \label{fig:IncContribMC_nue} 
+  }
+\end{figure}
 \textcolor{red}{SPECTRA WITH OSCILLATED OVERLAY. I GUESS THE SAME PARAMS AS USED FOR THE RATIOS BELOW}
 
 The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the $\nue$ appearance stat only exclusion contour and allowed region. The injected point $\Delta m^2_{41} = 1.32$ eV$^2$, $sin^22\theta_{\mu e} = 0.003$, used when producing the allowed region is shown along with two further points on the exclusion contour at $\Delta m^2_{41} = 1$ eV$^2$, $sin^22\theta_{\mu e} = 0.0014$ and $\Delta m^2_{41} = 100$ eV$^2$, $sin^22\theta_{\mu e} = 0.0005$. $\nue$ appearance spectra are produced using oscillation parameters corresponding to each of these three points for each of the three SBN detectors. The ratio of each of these oscillated spectra to the nominal for each detector are shown in the the remaining plots in Figure~\ref{fig:Nue_app_spectra_ratios} and highlight the expected oscillation signal.
@@ -349,7 +360,18 @@ The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the $\nue$ ap
 \section{\texorpdfstring{$\nu_e$ Disappearance Analysis}{nue Disappearance Analysis}}
 
 Nominal event rate tables and spectra are the same as shown in \SectionRef{sec:nue_app}.
-
+\begin{figure}[h!]
+  {\includegraphics[width=0.49\textwidth]{figures-chap6/spectra/nue_disapp_dmsq_3_sinsq_0.4_overlay_spectrum_sbn_nd_BNB_FHC_0_modes.pdf}}
+  {\includegraphics[width=0.49\textwidth]{figures-chap6/spectra/nue_disapp_dmsq_3_sinsq_0.4_overlay_spectrum_sbn_uboone_BNB_FHC_1_modes.pdf}}
+  {\includegraphics[width=0.49\textwidth]{figures-chap6/spectra/nue_disapp_dmsq_3_sinsq_0.4_overlay_spectrum_sbn_icarus_BNB_FHC_2_modes.pdf}}
+  \captionsetup{width=0.49\textwidth}
+  \parbox[b]{0.49\textwidth}%
+  {
+    \caption[SBN CC Inclusive reconstructed neutrino energy spectra with oscillated spectrum overlayed]{The nominal spectra as in \FigureRef{fig:nominal_nue_spectra} but an additional integrated oscillated spectrum with oscillation parameters, $sin^22\theta_{ee} = 0.4$ and $\Delta m^2_{41} = 3$ eV$^2$ has been overlayed which shows the change in event rate.\\\\\\}
+    \label{fig:IncContribMC_nue} 
+  }
+  
+\end{figure}
 \begin{figure}[h!]
     \centering
     \includegraphics[width = 0.49\textwidth]{figures-chap6/overlays/nue_disapp_stat_osc_markers.pdf}
